# feather-client-

./: LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  data.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: native.ts
